--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.12)
 project(InputDevice)
 
 add_subdirectory(src)
+add_subdirectory(keyboardLib)
+add_subdirectory(mouseLib)
+add_subdirectory(transmitterLib)
