Improved mouse library + small changes to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
-project(InputDevice)
+project(Input)
 
 add_subdirectory(src)
 add_subdirectory(keyboardLib)
 add_subdirectory(mouseLib)
 add_subdirectory(transmitterLib)
+add_subdirectory(inputLib)
