--- a/transmitterLib/CMakeLists.txt
+++ b/transmitterLib/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
-project(InputDevice)
+project(Input)
 
 add_library(Transmitter STATIC Transmitter.cpp Transmitter.h)
-set_target_properties(Transmitter PROPERTIES
-                      CXX_STANDARD 20
-                      CXX_STANDARD_REQUIRED ON
+set_target_properties(
+    Transmitter PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
 )                                       
