--- a/keyboardLib/CMakeLists.txt
+++ b/keyboardLib/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.12)
-project(InputDevice)
+project(Input)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../transmitterLib)
 
 add_library(Keyboard STATIC Keyboard.cpp Keyboard.h)
 set_target_properties(
-                    Keyboard PROPERTIES
-                    CXX_STANDARD 20
-                    CXX_STANDARD_REQUIRED ON
+    Keyboard PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
 )
-target_link_libraries(Keyboard PUBLIC Transmitter)
+target_link_libraries(Keyboard PRIVATE Transmitter)
