--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,72 @@
-cmake_minimum_required(VERSION 3.12)
-project(Input)
+#
+# Project Properties
+#
+cmake_minimum_required(VERSION 3.8.1)
+project(ArduinoInputDevice LANGUAGES CXX)
+SET (APPLICATION_NAME "ArduinoInputDevice")
+SET (APPLICATION_CODENAME "${ArduinoInputDevice}")
+SET (APPLICATION_COPYRIGHT_YEARS "2024")
+SET (APPLICATION_VERSION_MAJOR 1)
+SET (APPLICATION_VERSION_MINOR 0)
+SET (APPLICATION_VERSION_PATCH 0)
+SET (APPLICATION_VERSION_TYPE SNAPSHOT)
+SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
+SET (APPLICATION_VENDOR_ID "Not Specified")
+SET (APPLICATION_VENDOR_NAME "Not Specifie")
+SET (APPLICATION_VENDOR_URL "Not Specifie")
+SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
 
-add_subdirectory(src)
-add_subdirectory(keyboardLib)
-add_subdirectory(mouseLib)
-add_subdirectory(transmitterLib)
-add_subdirectory(inputLib)
+
+#
+# Debugging Options
+#
+SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release
+
+#
+# Project Output Paths
+#
+SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
+SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
+SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")
+
+#
+# Project Search Paths
+#
+LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
+LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/tools")
+LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/thirdparty")
+SET (CMAKE_MODULE_PATH "${MAINFOLDER}/tools/share/cmake")
+INCLUDE_DIRECTORIES("${MAINFOLDER}/include")
+
+#
+# Configure Files
+#
+FILE (GLOB_RECURSE CONFIGINPUTS1 include/*.in.h.cmake)
+FILE (GLOB_RECURSE CONFIGINPUTS2 include/*.h.in.cmake)
+FILE (GLOB_RECURSE CONFIGINPUTS3 src/*.in.h.cmake)
+FILE (GLOB_RECURSE CONFIGINPUTS4 src/*.h.in.cmake)
+FILE (GLOB_RECURSE CONFIGINPUTS5 test/*.in.h.cmake)
+FILE (GLOB_RECURSE CONFIGINPUTS6 test/*.h.in.cmake)
+LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
+LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
+LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
+LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS4}")
+LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS5}")
+LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS6}")
+FOREACH (CONFIGINPUT ${CONFIGINPUTS})
+    STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
+    STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
+    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
+ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})
+
+#
+# Add Build Targets
+#
+ADD_SUBDIRECTORY(src)
+
+#
+# Add Install Targets
+#
+IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
+    INSTALL(DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}" DESTINATION "include")
+ENDIF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
